Fix: Improved image cropper, Validation everywhere

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -66,42 +66,63 @@ input[type='radio'].chip {
 	}
 }
 
-.image-overlay-btn {
+.image-overlay {
+	cursor: pointer;
 	position: relative;
 	transition: 0.5s ease;
-	min-width: 12rem;
+	height: 12rem;
+	width: fit-content;
+
 	img {
 		border-radius: 1.2em;
 		height: 12rem;
-
-		opacity: 1;
 		display: block;
 		// width: 100%;
 		// height: auto;
 		backface-visibility: hidden;
 	}
-
-	.overlay {
-		opacity: 0;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+	.content {
+		border-radius: 1.2em;
+		min-width: 12rem;
+		width: fit-content;
 		height: 100%;
-		width: 100%;
-		background: rgba(255, 255, 255, 0.75);
-		transition: 0.4s ease;
-
+		background: rgb(248, 248, 248);
 		svg {
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
 		}
-		&:hover {
-			opacity: 1;
-		}
 	}
+	button {
+		border-radius: 1.2rem;
+		position: absolute;
+		right: -8%;
+		bottom: 5%;
+	}
+	// .overlay {
+	// 	opacity: 0.3;
+	// 	position: absolute;
+	// 	top: 50%;
+	// 	left: 50%;
+	// 	transform: translate(-50%, -50%);
+	// 	height: 100%;
+	// 	width: 100%;
+	// 	background: rgba(248, 248, 248, 0.75);
+	// 	transition: 0.4s ease;
+	// 	.content {
+	// 		position: absolute;
+	// 		top: 50%;
+	// 		left: 50%;
+	// 		transform: translate(-50%, -50%);
+	// 		.text-muted {
+	// 			font-size: 12px;
+	// 		}
+	// 	}
+	// 	&:hover {
+	// 		opacity: 1;
+	// 	}
+	// }
 }
 
 footer {
